updating solution